07_retirement/grade.txt
Grading at Mon Jun 17 16:09:30 UTC 2019
Attempting to compile retirement.c
retirement.c: In function ‘main’:
retirement.c:43:5: error: implicit declaration of function ‘rerirement’ [-Werror=implicit-function-declaration]
     rerirement(age,money,a,b);
     ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
